# yaru-remix

./: CONTRIBUTING.md  README.md  install.md  meson.build  meson_options.txt  script.md  source.md
gnome-shell/: meson.build
gnome-shell/Yaru-remix-dark/gnome-shell/: gnome-shell.css
gnome-shell/Yaru-remix-light/gnome-shell/: gnome-shell-high-contrast.css  gnome-shell.css
gnome-shell/Yaru-remix/gnome-shell/: gnome-shell-high-contrast.css  gnome-shell.css
gtk/: meson.build
icons/: CONTRIBUTING.md  README.md  meson.build
icons/Yaru-blue/: index.theme
icons/Yaru-blue-dark/: index.theme
icons/Yaru-remix/: cursor.theme  index.theme
icons/Yaru-remix-dark/: cursor.theme  index.theme
icons/Yaru-remix-dark/24x24@2x/mimetypes/: gnome-mime-application-x-php.package-x-generic
icons/Yaru-remix-dark/256x256/mimetypes/: gnome-mime-application-x-php.package-x-generic
icons/Yaru-remix-dark/256x256@2x/mimetypes/: gnome-mime-application-x-php.package-x-generic
icons/Yaru-remix-dark/48x48/mimetypes/: gnome-mime-application-x-php.package-x-generic
icons/Yaru-remix-dark/48x48@2x/mimetypes/: gnome-mime-application-x-php.package-x-generic
icons/Yaru-remix-dark/cursors/: alias.cur  dnd-ask  dnd-ask.cur  dnd-copy  dnd-copy.cur  dnd-link  dnd-move  dnd-move.cur  dnd-no-drop  dnd-none  dnd-none.cur  grab  grabbing  grabbing.cur  hand1.cur  hand2  left_ptr_watch.ani  no-drop.cur  pointer.cur  watch  watch.ani
icons/Yaru-remix-light/: cursor.theme  index.theme
icons/Yaru-remix-light/cursors/: X_cursor.cur  all-scroll  all-scroll.cur  bd_double_arrow  bd_double_arrow.cur  bottom_left_corner  bottom_left_corner.cur  bottom_right_corner  bottom_right_corner.cur  bottom_side.cur  bottom_tee  bottom_tee.cur  cell  cell.cur  circle  circle.cur  context-menu  context-menu.cur  copy.cur  cross.cur  cross_reverse  crossed_circle.cur  default  dnd-copy  dot_box_mask  dotbox.cur  draft_large  fd_double_arrow.cur  left_ptr.cur  left_ptr_help  left_ptr_watch.ani  left_side.cur  left_tee  left_tee.cur  link.cur  ll_angle  ll_angle.cur  lr_angle  lr_angle.cur  move  (+47 more)
icons/Yaru-remix/cursors/: copy  copy.cur  dnd-copy.cur  left_ptr_watch  left_ptr_watch.ani  watch
icons/dark/: index.theme
icons/default/: index.theme
icons/light/: index.theme
icons/meson/: post_install.py
icons/src/: README.md
icons/src-dark/: README.md
icons/src-dark/cursors/: CURSORNAMES.md  README.md  test  w32-make.sh  x11-make.sh
icons/src-dark/fullcolor/: render-bitmaps.py
icons/src-dark/scalable/: actions  apps  categories  extract-symbolic-icons.rb  render-symbolic-icons.sh
icons/src-dark/symlinks/: README.md  generate-symlinks.sh
icons/src-dark/symlinks/fullcolor/: apps.list  categories.list  devices.list  mimetypes.list  places.list
icons/src-dark/symlinks/symbolic/: actions.list  apps.list  categories.list  mimetypes.list  places.list
icons/src-default/: README.md
icons/src-default/fullcolor/: render-bitmaps.py
icons/src-light/: README.md
icons/src-light/cursors/: anicursorgen.py  render-cursors.py  w32-make.sh  x11-make.sh
icons/src-light/fullcolor/: render-bitmaps.py
icons/src-light/scalable/: README.md  devices  emblems  extract-symbolic-icons.rb  mimetypes  places  render-symbolic-icons.sh  status
icons/src-light/symlinks/: generate-symlinks.sh
icons/src-light/symlinks/fullcolor/: actions.list  apps.list  cursors.list  emblems.list  status.list
icons/src/cursors/: w32-make.sh  x11-make.sh
icons/src/fullcolor/: render-bitmaps-old.py  render-bitmaps.py
icons/src/scalable/: extract-symbolic-icons.rb  render-symbolic-icons.sh
icons/src/symlinks/: generate-symlinks.sh
themes/: meson.build
themes/Yaru-blue-dark/: index.theme
themes/Yaru-blue-dark/gnome-shell/: gnome-shell-high-contrast.css  gnome-shell.css
themes/Yaru-blue-dark/gtk-2.0/: gtkrc
themes/Yaru-blue-dark/gtk-3.0/: gtk.css
themes/Yaru-blue-light/gnome-shell/: gnome-shell.css
themes/Yaru-blue-light/gtk-3.0/: gtk.css
themes/Yaru-blue-light/gtk-3.20/: gtk.css  gtk.gresource
themes/Yaru-blue/gnome-shell/: gnome-shell.css
themes/Yaru-blue/gtk-2.0/: gtkrc
themes/Yaru-blue/gtk-3.0/: gtk-dark.css  gtk-light.css  gtk.css
themes/Yaru-blue/gtk-3.20/: gtk.css
themes/Yaru-remix-dark/: index.theme
themes/Yaru-remix-dark/gnome-shell/: gnome-shell.css
themes/Yaru-remix-dark/gtk-2.0/: gtkrc
themes/Yaru-remix-dark/gtk-3.0/: gtk-dark.css  gtk.css  gtk.gresource
themes/Yaru-remix-dark/gtk-3.20/: gtk-dark.css  gtk.gresource
themes/Yaru-remix-light/gnome-shell/: gnome-shell.css
themes/Yaru-remix-light/gtk-3.0/: gtk.css  gtk.gresource
themes/Yaru-remix-light/gtk-3.20/: gtk-dark.css  gtk.css  gtk.gresource
themes/Yaru-remix/gnome-shell/: gnome-shell.css
themes/Yaru-remix/gtk-3.0/: gtk.gresource
themes/Yaru-remix/gtk-3.20/: gtk.gresource
wallpapers/: meson.build  yaru-remix-wallpapers.xml
(+94 files in other folders)
