install_subdir('Yaru-remix',
    install_dir: join_paths(get_option('prefix'), 'share/themes')
)

install_subdir('Yaru-remix-dark',
    install_dir: join_paths(get_option('prefix'), 'share/themes')
)

install_subdir('Yaru-remix-light',
    install_dir: join_paths(get_option('prefix'), 'share/themes')
)


