install_subdir('Yaru-blue',
    install_dir: join_paths(get_option('prefix'), 'share/icons')
)

install_subdir('Yaru-blue-dark',
    install_dir: join_paths(get_option('prefix'), 'share/icons')
)

install_subdir('Yaru-blue-light',
    install_dir: join_paths(get_option('prefix'), 'share/icons')
)

meson.add_install_script('meson/post_install.py')
