install_subdir('Yaru-blue',
    install_dir: join_paths(get_option('prefix'), 'share/themes')
)

install_subdir('Yaru-blue-dark',
    install_dir: join_paths(get_option('prefix'), 'share/themes')
)

install_subdir('Yaru-blue-light',
    install_dir: join_paths(get_option('prefix'), 'share/themes')
)

