install_subdir('Yaru-remix-backgrounds',
    install_dir: join_paths(get_option('prefix'), 'share/backgrounds')
)

install_subdir('Yaru-remix-dark',
    install_dir: join_paths(get_option('prefix'), 'share/icons')
)

install_subdir('Yaru-remix-light',
    install_dir: join_paths(get_option('prefix'), 'share/icons')
)

install_data(
        join_paths('yaru-remix-wallpapers.xml'),
        install_dir: join_paths(get_option('prefix'), 'share/gnome-background-properties')
)
